LightBDD
===========================================

Version 3.10.0
----------------------------------------
+ #350 (LightBDD.Core)(New) Added IScenario.Descriptor property providing access to scenario MethodInfo

Version 3.9.0
----------------------------------------
+ #357 (LightBDD.Framework)(New) Implemented Expect.To.BeOfType() and Expect.To.BeCastableTo()
+ #356 (LightBDD.Core)(Change) Captured LightBddScope OnConfigure() failures
+ #352 (LightBDD.XUnit2)(Change) Obsoleted FeatureFixture constructor that accepts ITestOutputHelper in favour of parameterless ctor
+ #353 (LightBDD.Framework)(Change) Changed StepExecution.Current.Bypass() and StepExecution.Current.IgnoreScenario() to validate that they are called within running scenario
+ #351 (LightBDD.Framework)(Change) Updated Expect.To.BeLike()/BeLikeIgnoreCase() to match multiline text
+ #351 (LightBDD.Framework)(New) Added Expect.To.Match(string, RegexOptions) overload

Version 3.8.0
----------------------------------------
+ #338 (LightBDD.Framework)(New) Added ScenarioDescriptionAttribute to decorate scenarios with description. Updated ReportFormatters and ProgressNotifiers to include it when provided.
+ #338 Updated XmlReportFormatterSchema.xsd to v2.2 with support for Scenario Description
+ #344 (LightBDD.Core)(Change) Allowed IReportFormatter and IGlobalResourceSetUp implementations to use LightBDDConfigurationAware base

Version 3.7.0
----------------------------------------
+ #207 (LightBDD.Framework)(Change) Modernised Html Report
+ #207 (LightBDD.Framework)(New) Added ability to overrride CSS styles, Logo and Favicon with cfg.ReportWritersConfiguration().AddFileWriter<HtmlReportFormatter>() method
+ #281 (LightBDD.Core)(New) Added IScenarioSetUp and IScenarioTearDown execution extension interfaces allowing to run scenario set up / tear down when implemented on fixture class
+ #281 (LightBDD.Core)(Change) Exposed IScenario.Fixture property allowing scenario decorators accessing the fixture object