@@ -3,6 +3,7 @@ LightBDD
 
 Version 3.10.0
 ----------------------------------------
++ #365 (LightBDD.Framework)(New) Added ResetActual() method to Verifiable/VerifiableTable/VerifiableTree to allow setting them once more
 + #350 (LightBDD.Core)(New) Added IScenario.Descriptor property providing access to scenario MethodInfo
 
 Version 3.9.0
